--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,10 @@ padding: 0;
 color: #878787;
 font-size: 16px;
 font-weight: 100;
-line-height: 19px;
-text-transform: capitalize;}
+line-height: 19px;}
+
+li:first-letter {text-transform: capitalize;}
+
 
 .weather-app-wrapper {max-width: 600px;
 margin: 30px auto;}
