--- a/src/style.css
+++ b/src/style.css
@@ -1,44 +1,80 @@
-body {font-family: arial, sans-serif;}
+body {
+  font-family: arial, sans-serif;
+}
 
-h1 {color: #878787;
-font-size: 24px;
-font-weight: 100;
-line-height: 28px;}
+a {
+  text-decoration: none;
+}
 
-ul {margin: 0;
-padding: 0;}
+a:hover {
+  text-decoration: underline;
+}
 
-li {list-style: none;
-margin: 0;
-padding: 0;
-color: #878787;
-font-size: 16px;
-font-weight: 100;
-line-height: 19px;}
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+}
 
-li:first-letter {text-transform: capitalize;}
+ul {
+  margin: 0;
+  padding: 0;
+}
 
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #878787;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
 
-.weather-app-wrapper {max-width: 600px;
-margin: 30px auto;}
+li:first-letter {
+  text-transform: capitalize;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
 
 .weather-app {
-padding: 20px;
-border: 1px solid #dadde1;
-border-radius: 5px;}
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
 
-.overview {margin-bottom: 20px;}
+.overview {
+  margin-bottom: 20px;
+}
 
-.weather-temperature img {margin-right: 5px;
-float: left;
-height: 64px;
-width: 64px;}
+.weather-temperature img {
+  margin-right: 5px;
+  float: left;
+  height: 64px;
+  width: 64px;
+}
 
-.weather-temperature strong {color: rgb(33, 33, 33);
-font-size: 64px;
-line-height: 1;
-font-weight: 400;}
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
 
-.weather-temperature .units {position: relative;
-font-size: 16px;
-top: -34px}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+}
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+.weather-temperature .active:hover {
+  text-decoration: underline;
+}
